Evaluation2/3.waf_evaluation_ec2.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Default EC2 stack for the WAF Evaluation Project

Parameters:
  ProjectName:
    Type: String
    Description: Project Name
  RegionName:
    Type: String
    Description: Region Name

Mappings:
  CidrMap:
    ap-northeast-2:
      VpcCidr: 172.16.0.0/16
    ap-southeast-2:
      VpcCidr: 172.17.0.0/16 
  AmiMap:
    ap-northeast-2:
      Ami: ami-07d737d4d8119ad79
    ap-southeast-2:
      Ami: ami-0cc51e967b1cbe471

Resources:
# Web Application Load Balancer & Security Group
  WebAlbSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !ImportValue VpcId
      GroupDescription: !Sub "${AWS::Region} Web ALB Security Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-web-alb-sg"

  WebAlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Name: !Sub "${ProjectName}-${RegionName}-web-alb"
      SecurityGroups:
        - !Ref WebAlbSg
      Subnets:
        - !ImportValue PubSn1Id
        - !ImportValue PubSn2Id

  WebAlbTg:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${ProjectName}-${RegionName}-web-alb-tg"
      Port: 80
      Protocol: HTTP
      HealthCheckPath: '/login.php'
      HealthCheckIntervalSeconds: 10
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 3
      VpcId: !ImportValue VpcId
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-web-alb-tg"

  WebAlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WebAlbTg
      LoadBalancerArn: !Ref WebAlb
      Port: 80
      Protocol: HTTP

# LaunchTemplate & Security Group
  WebSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !ImportValue VpcId
      GroupDescription: !Sub "${AWS::Region} Web Instance Security Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !FindInMap [CidrMap, ap-northeast-2, VpcCidr]
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-web-sg"

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub "${ProjectName}-${RegionName}-lt"
      VersionDescription: version 1.0
      LaunchTemplateData:
        ImageId: !FindInMap [AmiMap, !Ref "AWS::Region", Ami]
        InstanceType: t2.micro
        KeyName: !ImportValue KeyPairName
        SecurityGroupIds:
          - !Ref WebSg
        UserData:
          Fn::Base64: |
            #!/bin/bash
            echo "p@ssw0rd" | passwd --stdin root
            sed -i "s/^#PermitRootLogin yes/PermitRootLogin yes/g" /etc/ssh/sshd_config
            sed -i "s/^PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
            systemctl restart sshd
            amazon-linux-extras install -y epel
            yum install -y stress
            mkdir /nfs-client
            mount -t nfs 172.16.2.100:/nfs-shared /nfs-client
            ec2-metadata -o | cut -d ' ' -f 2 >> /nfs-client/list.txt
            umount 172.16.2.100:/nfs-shared
            rmdir /nfs-client
            wget https://raw.githubusercontent.com/netidgo/project2/refs/heads/main/dvwa_config.sh
            chmod +x dvwa_config.sh
            sh dvwa_config.sh
            rm -f dvwa_config.sh
            availability_zone=$(ec2-metadata -z)
            instance_id=$(ec2-metadata -i)
            private_ip=$(ec2-metadata -o)
            cat <<EOF > /var/www/html/index.html
            <h1>Welcome to Homepage~!</h1>
            <h3>${availability_zone}</h3>
            <h3>${instance_id}</h3>
            <h3>${private_ip}</h3>
            <h2><a href="./login.php">DVWA Web</h2>
            EOF

# Auto Scaling Group & Scaling Policy
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub "${ProjectName}-${RegionName}-asg"
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      VPCZoneIdentifier:
        - !ImportValue WebSn3Id
        - !ImportValue WebSn4Id
      TargetGroupARNs:
        - !Ref WebAlbTg
      DesiredCapacity: 2
      MinSize: 2
      MaxSize: 4

  ScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref AutoScalingGroup
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 50
...
